--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <title>Boolzap</title>
 </head>
 <body>
+    <div id="app">
+        <div class="container">
+            <div class="contacts"></div>
+            <div class="chat"></div>
+        </div>
+    </div>
   <script src="js/script.js"></script>  
 </body>
 </html>
