--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div class="contact-info d-flex">
                         <div class="contact-access d-flex">
                             <span class="name">{{contact.name}}</span>
-                            <span>{{contact.messages[2].date}}</span>
+                            <span>{{contact.messages[contact.messages.length - 1].date}}</span>
                         </div>
                         <div class="contact-msg">
-                            <span>{{contact.messages[2].text}}</span>
+                            <span>{{contact.messages[contact.messages.length - 1].text}}</span>
                         </div>
                     </div>
                 </div>
@@ -107,10 +107,10 @@
         <div class="right-col">
             <div class="header d-flex">
                 <div class="header-user d-flex">
-                    <img src="img/avatar_3.jpg" alt="">
+                    <img :src="`img/avatar${contacts[counter].avatar}.jpg`" alt="">
                     <div class="contact-info d-flex">
-                        <span class="name">{{contacts[2].name}}</span>
-                        <span class="last-seen">{{contacts[2].messages[2].date}}</span>
+                        <span class="name">{{contacts[counter].name}}</span>
+                        <span class="last-seen">{{contacts[counter].messages[contacts[counter].messages.length - 1].date}}</span>
                     </div>
                 </div>
                 <div class="header-icons d-flex">
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="chat d-flex">
-                <div v-for="(message, index) in contacts[2].messages" class="message d-flex" :class="(message.status == 'sent') ? 'sent' : 'received'">
+                <div v-for="(message, index) in contacts[counter].messages" class="message d-flex" :class="(message.status == 'sent') ? 'sent' : 'received'">
                     <span class="text-message">{{message.text}}</span>
                     <span class="date-message">{{message.date}}</span>
                 </div>
