--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <img :src="`img/avatar${contacts[counter].avatar}.jpg`" alt="">
                     <div class="contact-info d-flex">
                         <span class="name">{{contacts[counter].name}}</span>
-                        <span class="last-seen">{{contacts[counter].messages[contacts[counter].messages.length - 1].date}}</span>
+                        <span class="last-seen">Ultimo accesso: {{contacts[counter].messages[contacts[counter].messages.length - 1].date}}</span>
                     </div>
                 </div>
                 <div class="header-icons d-flex">
